# assembler_lib

./: .gitignore  Assembler_Planung  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  Taskfile.yaml  pyproject.toml
.gitea/workflows/: code-qa.yaml  sync_main.yaml  sync_stable.yaml
Test Programme/: Fakultät.txt  Fibonatchi.txt
examples/: GCD  assembler_crasher_2000.asm  fakultaet.asm  fakultaet_128bit.asm  fakultaet_64bit.asm  fibonacci.asm  gcd.asm  hardware_test.asm  rng.asm
man/: assembler-format.5.md  assembler-format.5.ps  assembler.1.md  assembler.1.ronn  index.txt
src/: common.rs  lib.rs  linker.rs  logging.rs  main.rs  optimizer.rs  parser.rs  translator.rs
src/asm/: linker.rs  mod.rs  optimizer.rs  parser.rs  translator.rs
src/asm/parser/: data.rs  instructions.rs  literals.rs  symbols.rs  text.rs
src/asm/parser/text/: op_exp.rs
src/asm/translator/: file_handler.rs
src/common/: directives.rs  errors.rs  instructions.rs  labels.rs  macros.rs  mod.rs  registers.rs
src/parser/: code.rs  data.rs  instructions.rs  literals.rs  symbols.rs  text.rs
src/translator/: pretty_print.rs
tests/: data_spec.rs  formats.rs  general_func.rs  test_main.rs
