[package]
name = "assembler_lib"
version = "1.3.0"
description = "A library for an assembler for a self-written RISC-V based CPU"
repository = "https://git.mafiasi.de/Prj-MR/assembler_lib"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[features]
default = []
full_nop = ["raw_nop", "mem_load_nop"]
raw_nop = []
mem_load_nop = []
python_lib = ["dep:pyo3"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
asm_core_lib = { workspace = true }
nom = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
log = { workspace = true }
smartstring = { workspace = true }
pyo3 = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
assert_fs = { workspace = true }

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://git.mafiasi.de/Prj-MR/assembler_lib/compare/{{tag_name}}...HEAD", exactly=1},
]

# [package.metadata.binstall.signing]
# algorithm = "minisign"
# pubkey = "RWQ6OyUDGTMQlRVb+YQi+iU6m3qkoDFa3MdTKpwRMb4OpSy/5IOXbM8b"
# file = "{ url }.minisig"

# [package.metadata.cross.target.aarch64-apple-darwin]
# image = "ghcr.io/cross-rs/aarch64-apple-darwin-cross:local"
