[package]
name = "assembler_lib"
version = "2.0.0"
description = "A library for an assembler for a self-written RISC-V based CPU"
repository = "https://git.mafiasi.de/Prj-MR/assembler_lib"
rust-version = "1.71.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[features]
default = []
full_nop = ["raw_nop", "mem_load_nop"]
raw_nop = []
mem_load_nop = []
python_lib = ["dep:pyo3"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
indicatif = { workspace = true }
console = { workspace = true }
log = { workspace = true }
smartstring = { workspace = true }
pyo3 = { workspace = true, optional = true }
winnow = "0.6"

[dev-dependencies]
predicates = { workspace = true }
assert_fs = { workspace = true }

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://git.mafiasi.de/Prj-MR/assembler_lib/compare/{{tag_name}}...HEAD", exactly=1},
]
